# cppchat

./: .clang-tidy  .env.dev  .env.template  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-build.sh  docker-compose.yaml  run.sh
api/: CMakeLists.txt
api/include/: group.h  message.h  reflect.h  utils.h
api/src/: main.cpp  utils.cpp
app/: CMakeLists.txt
app/src/: main.cpp
docker/elasticsearch/: Dockerfile  init-users.sh
docker/loki/: loki-config.yaml
docker/nginx/: nginx.conf
docker/postgres/: gen-init-sql.sh  init.template.sql
docker/promtail/: promtail-config.yaml
python-client/: .gitignore  client_cli.py
server/: CMakeLists.txt
server/include/: client_handler.h  logger.h  server.h
server/src/: client_handler.cpp  logger.cpp  main.cpp  server.cpp
test/: message-framing-test.py
test/python-client/: message-framing-test.py
tools/migrate/: CMakeLists.txt  main.cpp
tools/migrate/src/: main.cpp
